2005-03-06 Werner Hoch <werner.ho@gmx.de>
	* micro/pic12c5xx-1.sym: removed accidently added power nets

2005-03-05 Carlos Nieves Onega <cnieves@iespana.es>
        * system-gafrc.in: Include font character to file map.
	
2005-01-29 Werner Hoch <werner.ho@gmx.de>
	* 4000/4002-2.sym, 4000/4016-2.sym, 4000/4027-1.sym, 4000/4528-1.sym,
	  4000/4538-1.sym, 74/74124-1.sym, 74/74124-2.sym, 
	  analog/darlington_NPN-1.sym, analog/dual-opamp-1.sym,
	  analog/quad_opamp-1.sym, diode/smda05-1.sym, ecl/MC10E104-2.sym, 
	  linear/lm339-1.sym, linear/lm393-1.sym, misc/ADG601-1.sym,
	  misc/ADG602-1.sym, misc/ADG619-1.sym, misc/ADG620-1.sym,
	  switch/ssrelay-spdt-lcc110-1.sym, apex/pa140-1.sym, apex/pa91-1.sym:
	  repaired slotdef and pinseq errors, misc small changes

2005-01-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* Removed system-commonrc.in from CVS as system-gafrc.in has replaced
	it

2005-01-15 Werner Hoch <werner.ho@gmx.de>
	* memory/27C256-1.sym, memory/27512-1.sym, memory/27256-1.sym:
	  corrected footprint
	* maxim/max1480A-1.sym, maxim/max1011-2.sym, maxim/max1011-1.sym:
	  corrected net attributes

2005-01-06 Stuart Brorson <sdb@cloud9.net>
	* system-commonrc.in: renamed this file system-gafrc.in.
	* Makefile.am, configure.ac: changed to accomodate system-gafrc
	* spice/spice-npn-1.sym, spice/spice-npn-1.sym, 
	  spice/spice-vc-switch-1.sym:  Added SPICE symbols.

2005-01-06 Werner Hoch <werner.ho@gmx.de>
	* maxim/*sym: added documentation, pinlabel, pintype,
	fixed several symbol errors,
	* analog/ntc-1.sym: contained a component, fixed
	* linear/lm135-1.sym, transistor/2N5245-1.sym, transistor/2N5911-1.sym:
	added pinattributes
	
2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* allegro/3967-1.sym allegro/3967-2.sym irf/ips021-1.sym
	maxim/DS1307-1.sym maxim/DS89C450-1.sym maxim/max662A-1.sym
	memory/27C2001-1.sym micro/ATmega128-1.sym micro/ATmega128-2.sym
	micro/ATmega128-3.sym micro/ATmega64-1.sym micro/FT245BM-1.sym